# Agentic-VolatilityExplainer

./: .claudeignore  .cursorignore  .env.example  .gitignore  README.md  check_apis.py  pyproject.toml  requirements.txt
.claude/: settings.json
apps/: streamlit_app.py
apps/.streamlit/: config.toml
apps/ui/: components.py  placeholders.py  theme.py
src/volatility_explainer/: __init__.py  config.py
src/volatility_explainer/agent/: orchestrator.py  prompts.py
src/volatility_explainer/api/: routes.py
src/volatility_explainer/clients/: __init__.py  alpaca.py  finnhub.py  fred.py  massive.py
src/volatility_explainer/domain/: __init__.py  volatility.py
src/volatility_explainer/mcp/: server.py
src/volatility_explainer/mcp/tools/: __init__.py  events.py  macro.py  news.py  options.py  price.py
tests/integration/: test_agent_timing.py  test_alpaca_client.py
tests/unit/: test_volatility.py
