[project]
name = "volatility-explainer"
version = "0.1.0"
description = "Agentic tool that explains stock implied volatility"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "streamlit>=1.28",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "mcp>=1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "anthropic>=0.40",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/volatility_explainer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
